--- a/assets/css/clinica.css
+++ b/assets/css/clinica.css
@@ -1,144 +1,184 @@
 
 :root{
-  --primary-color: #00285f;
-  --secundary-color:#f9f9f1;
-  --button-radius:15px;
-}
-html {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
-
+    --primary-color: #00285f;
+    --secundary-color:#f9f9f1;
+    --button-radius:15px;
   }
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Ubuntu', sem serifa;
-    text-decoration: none;
-
-}
-
-header {
-    background-color: var(--primary-color);
-    position: fixed;
-    z-index: 1000;
-}
-header .user{
-    padding-top: 30px;
-    padding-left: 20px;
-}
-
-header .user a{
-    color: var(--secundary-color);
-    font-size: 20px;
-}
-
-header .user a:hover{
-    color: red;
-}
-main{background-color: var(--primary-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-}
-
-.section-form .titulo-cadastro{
-    color: var(--secundary-color);
-    margin-bottom: -50px;
-}
-
-.section-form a{
-    color: var(--secundary-color);
-    text-decoration: none;
-    font-size: 35px;
-}
-.section-form a:hover{
-    text-decoration: underline;
-   
-}
-.div-formulario{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 55%;
-    gap: 30px;
-}
-
-.section-form{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100%;
-    width: 350px;
-    gap: 30px;
-}
-input::placeholder{
-    position: absolute;
-    top: 5px;
-    left: 5px;
-}
-.cadastro-horario{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.cadastro-horario p{
-    font-size: 12px;
-    color: var(--secundary-color);
-}
-
-.horario{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 10px;
-}
-
-.input-imagem{
-    display: none;
-    outline: none;
-
-}
-input:hover{
-    cursor: none;
-}
-.cursor:hover{
-    cursor: pointer;;
-}
-.div-button ,.div-button-prox{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 170px;
-    height: 30px;
-    border-radius: var(--button-radius);
-    background-color: var(--secundary-color);
-    color: black;
-    border: none;
-}
-.div-button option{
-    text-align: center;
-}
-
-.div-button-prox:hover{
-    mix-blend-mode:hard-light;
-    cursor: pointer;
-    background-color: var(--primary-color);
-    color: var(--secundary-color);
-}
-label{
-    display: flex;
-    align-items: center;
-    justify-content: center
-}
-
+  html {
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
+  
+    }
+  
+  *{
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+      font-family: 'Ubuntu', sem serifa;
+      text-decoration: none;
+  
+  }
+  
+  body{
+      background-color: var(--primary-color);
+  }
+  .section-content{
+      display: flex;
+      justify-content: center;
+      align-items: center; 
+      flex-direction: column;
+      height: 100vh;
+  }
+  
+  .div-nomes{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: var(--secundary-color);
+      flex-direction: column;
+  }
+  
+  .div-nomes a{
+      color: var(--secundary-color);
+      font-size: 30px;
+      margin: 20px;
+      text-decoration: underline;
+      }
+  .div-nomes a:hover{
+      text-decoration-color: red;
+  }
+  .div-nomes h1{
+      margin-block-end: 20px;
+  }
+  header {
+      position: fixed;
+      z-index: 1000;
+  }
+  header .user{
+      padding-top: 30px;
+      padding-left: 20px;
+  }
+  
+  header .user a{
+      color: var(--secundary-color);
+      font-size: 20px;
+  }
+  
+  header .user a:hover{
+      color: red;
+  }
+  main{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+  }
+  
+  .section-form a{
+      color: var(--secundary-color);
+      text-decoration: none;
+      font-size: 35px;
+  }
+  .section-form a:hover{
+      text-decoration: underline;
+     
+  }
+  .div-formulario{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      gap: 30px;
+  }
+  
+  .section-form{
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      height: 100%;
+      width: 350px;
+      gap: 30px;
+  }
+  input::placeholder{
+      position: absolute;
+      top: 5px;
+      left: 5px;
+  }
+  .cadastro-horario{
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      
+  }
+  
+  .cadastro-horario p{
+      font-size: 15px;
+      color: var(--secundary-color);
+  }
+  
+  .horario{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin: 10px;
+  }
+  
+  .input-imagem{
+      display: none;
+      outline: none;
+  
+  }
+  .cadastro-horario .horario input{
+      text-align: center;
+  
+  }
+  input{
+      outline: none;
+      width: 170px;
+      height: 30px;
+      border-radius: var(--button-radius);
+      border: none;
+  }
+  
+  .cursor:hover{
+      cursor: pointer;
+  }
+  .div-button ,.div-button-prox{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 170px;
+      height: 30px;
+      border-radius: var(--button-radius);
+      background-color: var(--secundary-color);
+      color: black;
+      border: none;
+  }
+  .div-button option{
+      text-align: center;
+  }
+  
+  
+  .section-form .div-button a {
+      text-decoration: none;
+  }
+  .section-form .div-button a .div-button-prox:hover {
+      mix-blend-mode:hard-light;
+      cursor: pointer;
+      background-color: var(--primary-color);
+      color: var(--secundary-color);
+  
+  }
+  label{
+      display: flex;
+      align-items: center;
+      justify-content: center
+  }
+  
+  
