--- a/assets/css/endereco.css
+++ b/assets/css/endereco.css
@@ -1,120 +1,135 @@
 
 :root{
-  --primary-color: #00285f;
-  --secundary-color:#f9f9f1;
-  --button-radius:15px;
-}
-html {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
-
+    --primary-color: #00285f;
+    --secundary-color:#f9f9f1;
+    --button-radius:15px;
   }
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Ubuntu', sem serifa;
-
-}
-body{
-    background-color: var(--primary-color);
-    
-} 
-header {
-    background-color: var(--primary-color);
-    position: fixed;
-    z-index: 1000;
-}
-header .user{
-    padding-top: 20px;
-    padding-left: 20px;
-}
-
-header .user a{
-    color: var(--secundary-color);
-    font-size: 20px;
-    text-decoration: none;
-}
-
-header .user a:hover{
-    color: red;
-    cursor: pointer;
-}
-.main-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-
-}
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 350px;
-    height: 100%;
-    background-color: var(--primary-color);
-
-}
-.div-home a{
-    text-decoration: none;
-    color: var(--secundary-color);
-    font-size: 35px;
-}
-.div-titulo h1{
-    color: var(--secundary-color);
-    margin-top: 40px;
-}
-.div-home a:hover{
-    text-decoration: underline;
-}
-.div-inputs{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.div-inputs input{
-    border-right: none;
-    border-left: none;
-    border-top: none;
-    border-bottom: 1px solid var(--secundary-color);
-    background-color: transparent;
-    margin: 20px;
-    outline: none;
-    color: var(--secundary-color);
-
-
-}
-.div-inputs input::placeholder{
-    color: #eeeeee;
-    position: absolute;
-    left:10px;
-
-}
-.div-campos{
-    margin: 7px;
-}
-.div-button button{
-    width: 170px;
-    height: 30px;
-    border-radius: var(--button-radius);
-    background-color: var(--secundary-color);
-    color: black;
-    border: none;
-}
-
-.div-button button:hover{
-    mix-blend-mode: hard-light;
-    opacity: 100%;
-    cursor: pointer;
-}
-
-@media (max-width:540px){
-    .container{
-      
-        width: 100%;
-    
+  html {
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
+  
     }
-}
+  *{
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+      font-family: 'Ubuntu', sem serifa;
+  
+  }
+  body{
+      background-color: var(--primary-color);
+      
+  } 
+  header {
+      background-color: var(--primary-color);
+      position: fixed;
+      z-index: 1000;
+  }
+  header .user{
+      padding-top: 20px;
+      padding-left: 20px;
+  }
+  
+  header .user a{
+      color: var(--secundary-color);
+      font-size: 20px;
+      text-decoration: none;
+  }
+  
+  header .user a:hover{
+      color: red;
+      cursor: pointer;
+  }
+  .main-container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100vh;
+  
+  }
+  .container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      width: 350px;
+      height: 100%;
+      background-color: var(--primary-color);
+  
+  }
+  .div-home a{
+      text-decoration: underline;
+      color: var(--secundary-color);
+      font-size: 30px;
+  }
+  .div-titulo h1{
+      color: var(--secundary-color);
+      margin-top: 40px;
+  }
+  .div-home a:hover{
+      text-decoration-color: red
+  }
+  .div-inputs{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+  }
+  .div-inputs input{
+      border-right: none;
+      border-left: none;
+      border-top: none;
+      border-bottom: 1px solid var(--secundary-color);
+      background-color: transparent;
+      margin: 20px;
+      outline: none;
+      color: var(--secundary-color);
+  
+  
+  }
+  .div-inputs input::placeholder{
+      color: #eeeeee;
+      position: absolute;
+      left:10px;
+  
+  }
+  .div-campos{
+      margin: 7px;
+  }
+  .div-button{
+      width: 170px;
+      height: 30px;
+      border-radius: var(--button-radius);
+      border: none;
+      background-color: var(--secundary-color);
+      color: black;
+  }
+  .div-button a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      text-decoration: none;
+  }
+  .div-button a button{
+      width: 100%;
+      height: 100%;
+      border-radius: var(--button-radius);
+      border: none;
+      
+  }
+  .div-button button:hover{
+      mix-blend-mode:hard-light;
+      cursor: pointer;
+      background-color: var(--primary-color);
+      color: var(--secundary-color);
+  }
+  
+  @media (max-width:540px){
+      .container{
+        
+          width: 100%;
+      
+      }
+  }
