--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,7 +222,7 @@ main{
     color: var(--secundary-color);
     font-size: 17px;
    }
-   .div-buttons .div-button select option{
+.div-buttons .div-button select option{
       text-align: center;
 }
 
@@ -316,6 +316,7 @@ main{
     
     }
   /* button ver mais */
+  /* button ver mais */
   .div-ver-mais{
     display: flex;
     justify-content: center;
@@ -323,25 +324,29 @@ main{
     margin-top: 15px;
 }
 
- .div-button-ver-mais:hover{
+ .div-button-ver-mais:hover,.div-button-ver-mais-hospitais:hover{
+    background-color: var(--secundary-color);
     opacity: 100%;
     cursor: pointer;
-    mix-blend-mode: hard-light;
 }
 
- .div-ver-mais .div-button-ver-mais{
+ .div-ver-mais .div-button-ver-mais , .div-ver-mais .div-button-ver-mais-hospitais{
    
     width: 150px;
     height: 30px;
     border-radius: var(--button-radius);
     background-color: var(--primary-color);
 }
+.div-ver-mais .div-button-ver-mais{   
+    margin-top: 50px;
+   
+   }
  .div-ver-mais .div-button-ver-mais-hospitais{   
     margin-top: 35px;
    
    }
 
- .div-ver-mais .div-button-ver-mais a{
+ .div-ver-mais .div-button-ver-mais a,.div-ver-mais .div-button-ver-mais-hospitais a{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -694,17 +699,16 @@ footer img{
     /* catálogo*/
    
         /* card */
-    .card-container{
+      /* card */
+      .section-card .card-container{
 
-        width: 320px;
-
+        width: 280px;
         height: 400px;
-        height: 390px;
         border-radius: 6px;
     
     }
         /* nome */
-    .button h3{
+   .section-card .card-container .button h3{
         font-size: 15px;
         margin-bottom: 40px;
         margin-top: 30px;
@@ -720,9 +724,9 @@ footer img{
             margin-top: -40px;
             
 }
-    .button p{
+   .section-card .card-container .button p{
             margin: 35px;
-            font-size: 14px;
+            font-size: 12px;
 
 }
     /* imagem*/
@@ -737,17 +741,21 @@ footer img{
                 
 
 }
+
         /* button ver mais */
     
-    .div-ver-mais .div-button-ver-mais{   
-        width: 120px;
-        height: 25px;
+    /* button ver mais */
+    
+    .section-card .card-container  .div-ver-mais .div-button-ver-mais,
+    .section-card .card-container  .div-ver-mais .div-button-ver-mais-hospitais{   
+            width: 120px;
+            height: 25px;
 
-}
+    }
 
-    .div-ver-mais .div-button-ver-mais a {
-        font-size: 15px;
-}
+    .div-ver-mais .div-button-ver-mais a,.div-ver-mais .div-button-ver-mais-hospitais a {
+            font-size: 15px;
+    }
     /* buttons do catalógo*/
     .div-buttons-catalogo .buuton-prox-ant{
         width: 73px;
@@ -788,232 +796,7 @@ footer img{
         text-align: center;
     }
 }
-@media (max-width: 400px){
-     
-    .section-slogan{
-            width: 250px;
-        }
 
-   
-    .div-buttons .div-button{
-    width: 70px;
-    height: 27px;
-    margin-right: 5px;
-    margin-left: 5px;
-
-    }
-
-    .div-buttons .div-button a{
-    font-size: 8px;
-    }
-    
-    /* card */
-    .card-container{
-
-    width: 240px;
-    height: 400px;
-    background-color: var(--secundary-color);
-    border-radius: 6px;
-    box-shadow: 0 1px 5px 1px rgba(0, 0,0, .3);
-    margin: 30px;
-
-}
-      /* section slogan */
-    
-      .section-slogan{
-        flex-direction: column;
-        width: 300px;
-        height: 310px;
-        position: relative;
-
-    }
-    .div-slogan{
-        margin-left: 0px;
-        margin-bottom: 0px;
-    }
-    .div-slogan h1{
-        margin-top: 30px;
-        text-align: center;
-        font-size: 25px;
-        padding: 10px;
-    }
-    .div-slogan p{
-        text-align: center;
-        font-size: 20px;
-        margin-top: 10px;
-    }
-    
-    .img-slogan img{
-        width: 180px;
-        height: 180px;
-        margin-right: 0px;
-        padding: 10px;
-        margin-bottom: 15px;
-    }
-    /* button search */
-    .input-search{
-    
-        width: 280px;
-        height: 60px;
-        border-radius: 17px;
-        
-    }
-    .div-search input{
-        width: 180px;
-        height: 30px;
-        background-color: #eeeeee;
-        border-radius: 8px;
-        
-    }
-    
-    .button-search{
-        width: 70px;
-        height: 30px;
-        
-    }
-        
-    .button-search a{
-        
-        font-size: 15px;
-    
-    }
-    .div-search input::placeholder{
-        font-size: 10px;
-    }
-
-    /* filtros  */
-
-    .div-buttons .div-button{
-    width: 105px;
-    height: 27px;
-    margin-right: 5px;
-    margin-left: 5px;
-
-    }
-
-    .div-buttons .div-button a{
-    font-size: 10px;
-    }
-
-    .div-buttons .div-button select{
-    width: 100%;
-    height: 100%;
-    border-radius: var(--button-radius);
-    background-color: var(--primary-color);
-    color: var(--secundary-color);
-
-    
-    }
-    
-    /* catálogo*/
-
-            /* card */
-    .card-container{
-
-        width: 320px;
-        height: 380px;
-        border-radius: 6px;
-    
-    }
-        /* nome */
-    .button h3{
-        font-size: 15px;
-        margin-bottom: 40px;
-        margin-top: 30px;
-    }
-        /* endereço e horario */
-
-    .button{
-        padding: 20px;
-        padding-top: 60px;
-        text-align: center;
-}
-    .button .btn-margin{
-            margin-top: -40px;
-            
-}
-    .button p{
-            margin: 35px;
-            font-size: 14px;
-
-}
-    /* imagem*/
-    .image-container{
-        width: 100px;
-        height: 100px;
-        margin-top: 20px;
-
-}
-    .top{
-        height: 60px;
-                
-
-}
-        /* button ver mais */
-    
-    .div-ver-mais .div-button-ver-mais{   
-        width: 120px;
-        height: 25px;
-
-}
-
-    .div-ver-mais .div-button-ver-mais a {
-        font-size: 15px;
-}
-    /* buttons do catalógo*/
-    .div-buttons-catalogo .buuton-prox-ant{
-        width: 73px;
-        height: 24px;
-
-    }
-    .div-buttons-catalogo .buuton-prox-ant a{
-        font-size: 12px
-    }
-    .div-buttons-catalogo .button-catalogo {
-        width: 28px;
-        height: 24px;
-    }
-
-    .footer-distributed .footer-left,
-    .footer-distributed .footer-center,
-    .footer-distributed .footer-right{
-        display: block;
-        width: 100%;
-        margin-bottom: 100px;
-        text-align: center;
-    }
-}
-
-@media (max-width: 355px){
-   
-   .section-slogan{
-           width: 250px;
-       }
-
-   .div-buttons .div-button a{
-   font-size: 8px;
-   }
-   
-   /* card */
-   .card-container{
-
-   width: 230px;
-   height: 380px;
-   background-color: #fff;
-   border-radius: 6px;
-   box-shadow: 0 1px 5px 1px rgba(0, 0,0, .3);
-   margin: 30px;
-
-}
-.footer-distributed .footer-left,
-.footer-distributed .footer-center,
-.footer-distributed .footer-right{
-    display: block;
-    width: 100%;
-    margin-bottom: 100px;
-    text-align: center;
-}
-}
 @media (min-width:768px) and  (max-width:992px){
     
 /* header mobile */
